board-service 에 라우터 추가
